[gd_scene load_steps=11 format=3 uid="uid://b2pmjuln13g05"]

[ext_resource type="Script" path="res://espinhos.gd" id="1_3wcr6"]
[ext_resource type="Texture2D" uid="uid://dvmrbrm686l8y" path="res://assets/traps/Free/Traps/Fire/On (16x32).png" id="2_yodgm"]
[ext_resource type="Texture2D" uid="uid://63rba54m3rmg" path="res://assets/Medieval_Castle_Asset_Pack/Tiles/spikes.png" id="3_cqlhp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3bekj"]
size = Vector2(32, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rym1"]
size = Vector2(32, 26.5)

[sub_resource type="Animation" id="Animation_kesv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yodgm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_if2id"]
resource_name = "hit"
length = 0.4

[sub_resource type="Animation" id="Animation_i130c"]
resource_name = "off"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_cqlhp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xhf7g"]
resource_name = "on"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_cqlhp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5n68k"]
_data = {
"RESET": SubResource("Animation_kesv6"),
"hit": SubResource("Animation_if2id"),
"off": SubResource("Animation_i130c"),
"on": SubResource("Animation_xhf7g")
}

[node name="Espinhos" type="StaticBody2D"]
script = ExtResource("1_3wcr6")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(9, -2)
shape = SubResource("RectangleShape2D_3bekj")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(9, -19)
texture = ExtResource("2_yodgm")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(9, -28)
shape = SubResource("RectangleShape2D_4rym1")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5n68k")
}

[node name="StateTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
